--- a/home.html
+++ b/home.html
@@ -3,3 +3,5 @@
 <h5>欢迎你们来玩</h5>
 <h5>可以和我唱跳rap打篮球</h5>
 <h5>玩累了直接睡觉 没关系的</h5>
+<img src="D:\新建文件夹\PS\baiguiyexing2.png">
+<marquee>啦啦啦啦啦（发癫ing</marquee>
