--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
-<h5>我叫卷卷 16岁 是ikun</h5>
+<h1><font color=”#89D5FF”><b>欢迎来到卷卷的网站</h1></font></b>
 <h5>我的家里还蛮大的</h5>
 <h5>欢迎你们来玩</h5>
 <h5>可以和我唱跳rap打篮球</h5>
 <h5>玩累了直接睡觉 没关系的</h5>
-<img src="D:\新建文件夹\PS\baiguiyexing2.png">
+<img src="baiguiyexing2.png">
 <marquee>啦啦啦啦啦（发癫ing</marquee>
