--- a/home.html
+++ b/home.html
@@ -1,7 +1,8 @@
-<h1><font color=”#89D5FF”><b>欢迎来到卷卷的网站</h1></font></b>
-<h5>我的家里还蛮大的</h5>
-<h5>欢迎你们来玩</h5>
-<h5>可以和我唱跳rap打篮球</h5>
-<h5>玩累了直接睡觉 没关系的</h5>
+<h1><font color=”#9966ff”><b>欢迎来到卷卷的网站</h1></font></b>
+<h3><font color=”#9999ff”><b>很高兴和你交朋友</h3></font></b>
+<h3><font color=”#9999cc”><b>贴贴</h3></font></b>
+<h3><font color=”#99ccff”><b>给你看看我的学校</h3></font></b>
 <img src="baiguiyexing2.png">
 <marquee>啦啦啦啦啦（发癫ing</marquee>
+<body background="c4b098bb167c1fe94f4372f8635dd160.jpeg">
+  <body background="c4b098bb167c1fe94f4372f8635dd160.jpeg" body bgproperties=fixed>
