--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <h1><font color=”#9966ff”><b>欢迎来到卷卷的网站</h1></font></b>
 <h3><font color=”#9999ff”><b>很高兴和你交朋友</h3></font></b>
-<h3><font color=”#9999cc”><b>贴贴~</h3></font></b>
+<h3><font color=”#9999cc”><b>贴贴</h3></font></b>
 <h3><font color=”#99ccff”><b>给你看看我的学校</h3></font></b>
 <img src="baiguiyexing2.png">
 <marquee>啦啦啦啦啦（发癫ing</marquee>
