--- a/home.html
+++ b/home.html
@@ -4,4 +4,4 @@
 <h3><font color=”#99ccff”><b>给你看看我的学校</h3></font></b>
 <img src="baiguiyexing2.png">
 <marquee>啦啦啦啦啦（发癫ing</marquee>
-<body bgcolor=”#ffccff”>
+<body bgcolor=”#CC99FF”>
